HW4/parser.output
Terminals unused in grammar

   ERROR


State 25 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 181 conflicts: 1 shift/reduce
State 182 conflicts: 1 shift/reduce
State 184 conflicts: 2 reduce/reduce
State 187 conflicts: 1 shift/reduce
State 196 conflicts: 1 shift/reduce
State 200 conflicts: 1 shift/reduce
State 219 conflicts: 1 shift/reduce
State 220 conflicts: 1 shift/reduce
State 227 conflicts: 1 shift/reduce
State 233 conflicts: 1 shift/reduce
State 239 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: $@1 global_decl_list

    3 global_decl_list: global_decl_list global_decl
    4                 | /* empty */

    5 global_decl: decl_list function_decl
    6            | function_decl

    7 $@2: /* empty */

    8 function_decl: type ID MK_LPAREN param_list MK_RPAREN MK_LBRACE $@2 block MK_RBRACE

    9 $@3: /* empty */

   10 function_decl: type ID MK_LPAREN MK_RPAREN MK_LBRACE $@3 block MK_RBRACE
   11              | type ID MK_LPAREN param_list MK_RPAREN MK_SEMICOLON
   12              | type ID MK_LPAREN MK_RPAREN MK_SEMICOLON

   13 param_list: param_list MK_COMMA param
   14           | param

   15 param: type ID
   16      | struct_type ID
   17      | type ID dim_fn
   18      | struct_type ID dim_fn

   19 dim_fn: MK_LB expr_null MK_RB dimfn1

   20 dimfn1: MK_LB expr MK_RB dimfn1
   21       | /* empty */

   22 expr_null: expr
   23          | /* empty */

   24 block: decl_list stmt_list
   25      | stmt_list
   26      | decl_list
   27      | /* empty */

   28 decl_list: decl_list decl
   29          | decl

   30 decl: type_decl
   31     | var_decl

   32 type_decl: TYPEDEF type id_list MK_SEMICOLON
   33          | TYPEDEF VOID id_list MK_SEMICOLON
   34          | TYPEDEF struct_type id_list MK_SEMICOLON
   35          | struct_type MK_SEMICOLON

   36 var_decl: type init_id_list MK_SEMICOLON
   37         | struct_type id_list MK_SEMICOLON
   38         | ID id_list MK_SEMICOLON

   39 type: INT
   40     | FLOAT
   41     | VOID
   42     | error

   43 struct_type: STRUCT tag

   44 $@4: /* empty */

   45 tag: ID MK_LBRACE $@4 decl_list MK_RBRACE

   46 $@5: /* empty */

   47 tag: MK_LBRACE $@5 decl_list MK_RBRACE

   48 $@6: /* empty */

   49 tag: ID MK_LBRACE $@6 MK_RBRACE

   50 $@7: /* empty */

   51 tag: MK_LBRACE $@7 MK_RBRACE
   52    | ID

   53 id_list: ID
   54        | id_list MK_COMMA ID
   55        | id_list MK_COMMA ID dim_decl
   56        | ID dim_decl

   57 dim_decl: MK_LB cexpr MK_RB
   58         | dim_decl MK_LB cexpr MK_RB

   59 cexpr: cexpr add_op mcexpr
   60      | mcexpr

   61 mcexpr: mcexpr mul_op cfactor
   62       | cfactor

   63 cfactor: CONST
   64        | CONSTF
   65        | MK_LPAREN cexpr MK_RPAREN

   66 init_id_list: init_id
   67             | init_id_list MK_COMMA init_id

   68 init_id: ID
   69        | ID dim_decl
   70        | ID OP_ASSIGN relop_expr

   71 stmt_list: stmt_list stmt
   72          | stmt

   73 $@8: /* empty */

   74 stmt: MK_LBRACE $@8 block MK_RBRACE
   75     | WHILE MK_LPAREN relop_expr_list MK_RPAREN stmt
   76     | FOR MK_LPAREN assign_expr_list MK_SEMICOLON relop_expr_list MK_SEMICOLON assign_expr_list MK_RPAREN stmt
   77     | IF MK_LPAREN relop_expr MK_RPAREN stmt ELSE stmt
   78     | IF MK_LPAREN relop_expr MK_RPAREN stmt
   79     | function_call
   80     | var_ref OP_ASSIGN relop_expr MK_SEMICOLON
   81     | relop_expr_list MK_SEMICOLON
   82     | MK_SEMICOLON
   83     | RETURN MK_SEMICOLON
   84     | RETURN relop_expr MK_SEMICOLON

   85 function_call: ID MK_LPAREN relop_expr_list MK_RPAREN

   86 assign_expr_list: nonempty_assign_expr_list
   87                 | /* empty */

   88 nonempty_assign_expr_list: nonempty_assign_expr_list MK_COMMA assign_expr
   89                          | assign_expr

   90 $@9: /* empty */

   91 assign_expr: ID $@9 OP_ASSIGN relop_expr
   92            | relop_expr

   93 relop_expr: relop_term
   94           | relop_expr op_or relop_term

   95 op_or: OP_OR

   96 relop_term: relop_factor
   97           | relop_term op_and relop_factor

   98 op_and: OP_AND

   99 relop_factor: expr
  100             | expr rel_op expr

  101 rel_op: OP_LT
  102       | OP_LE
  103       | OP_GT
  104       | OP_GE
  105       | OP_EQ
  106       | OP_NE

  107 relop_expr_list: nonempty_relop_expr_list
  108                | /* empty */

  109 nonempty_relop_expr_list: nonempty_relop_expr_list MK_COMMA relop_expr
  110                         | relop_expr

  111 expr: expr add_op term
  112     | term

  113 add_op: OP_PLUS
  114       | OP_MINUS

  115 term: term mul_op factor
  116     | factor

  117 mul_op: OP_TIMES
  118       | OP_DIVIDE

  119 factor: MK_LPAREN relop_expr MK_RPAREN
  120       | OP_NOT MK_LPAREN relop_expr MK_RPAREN
  121       | OP_MINUS MK_LPAREN relop_expr MK_RPAREN
  122       | CONST
  123       | CONSTF
  124       | OP_NOT CONST
  125       | OP_NOT CONSTF
  126       | OP_MINUS CONST
  127       | OP_MINUS CONSTF
  128       | function_call
  129       | OP_NOT ID MK_LPAREN relop_expr_list MK_RPAREN
  130       | OP_MINUS ID MK_LPAREN relop_expr_list MK_RPAREN
  131       | var_ref
  132       | OP_NOT var_ref
  133       | OP_MINUS var_ref
  134       | CONSTS

  135 var_ref: ID
  136        | var_ref var_ref_dim
  137        | var_ref struct_tail

  138 var_ref_dim: dim
  139            | dim var_ref_dim

  140 dim: MK_LB expr MK_RB

  141 struct_tail: MK_DOT ID


Terminals, with rules where they appear

$end (0) 0
error (256) 42
ID (258) 8 10 11 12 15 16 17 18 38 45 49 52 53 54 55 56 68 69 70 85
    91 129 130 135 141
CONST (259) 63 122 124 126
CONSTS (260) 134
CONSTF (261) 64 123 125 127
VOID (262) 33 41
INT (263) 39
FLOAT (264) 40
IF (265) 77 78
ELSE (266) 77
WHILE (267) 75
FOR (268) 76
STRUCT (269) 43
TYPEDEF (270) 32 33 34
OP_ASSIGN (271) 70 80 91
OP_OR (272) 95
OP_AND (273) 98
OP_NOT (274) 120 124 125 129 132
OP_EQ (275) 105
OP_NE (276) 106
OP_GT (277) 103
OP_LT (278) 101
OP_GE (279) 104
OP_LE (280) 102
OP_PLUS (281) 113
OP_MINUS (282) 114 121 126 127 130 133
OP_TIMES (283) 117
OP_DIVIDE (284) 118
MK_LB (285) 19 20 57 58 140
MK_RB (286) 19 20 57 58 140
MK_LPAREN (287) 8 10 11 12 65 75 76 77 78 85 119 120 121 129 130
MK_RPAREN (288) 8 10 11 12 65 75 76 77 78 85 119 120 121 129 130
MK_LBRACE (289) 8 10 45 47 49 51 74
MK_RBRACE (290) 8 10 45 47 49 51 74
MK_COMMA (291) 13 54 55 67 88 109
MK_SEMICOLON (292) 11 12 32 33 34 35 36 37 38 76 80 81 82 83 84
MK_DOT (293) 141
ERROR (294)
RETURN (295) 83 84


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 2, on right: 0
$@1 (43)
    on left: 1, on right: 2
global_decl_list (44)
    on left: 3 4, on right: 2 3
global_decl (45)
    on left: 5 6, on right: 3
function_decl (46)
    on left: 8 10 11 12, on right: 5 6
$@2 (47)
    on left: 7, on right: 8
$@3 (48)
    on left: 9, on right: 10
param_list (49)
    on left: 13 14, on right: 8 11 13
param (50)
    on left: 15 16 17 18, on right: 13 14
dim_fn (51)
    on left: 19, on right: 17 18
dimfn1 (52)
    on left: 20 21, on right: 19 20
expr_null (53)
    on left: 22 23, on right: 19
block (54)
    on left: 24 25 26 27, on right: 8 10 74
decl_list (55)
    on left: 28 29, on right: 5 24 26 28 45 47
decl (56)
    on left: 30 31, on right: 28 29
type_decl (57)
    on left: 32 33 34 35, on right: 30
var_decl (58)
    on left: 36 37 38, on right: 31
type (59)
    on left: 39 40 41 42, on right: 8 10 11 12 15 17 32 36
struct_type (60)
    on left: 43, on right: 16 18 34 35 37
tag (61)
    on left: 45 47 49 51 52, on right: 43
$@4 (62)
    on left: 44, on right: 45
$@5 (63)
    on left: 46, on right: 47
$@6 (64)
    on left: 48, on right: 49
$@7 (65)
    on left: 50, on right: 51
id_list (66)
    on left: 53 54 55 56, on right: 32 33 34 37 38 54 55
dim_decl (67)
    on left: 57 58, on right: 55 56 58 69
cexpr (68)
    on left: 59 60, on right: 57 58 59 65
mcexpr (69)
    on left: 61 62, on right: 59 60 61
cfactor (70)
    on left: 63 64 65, on right: 61 62
init_id_list (71)
    on left: 66 67, on right: 36 67
init_id (72)
    on left: 68 69 70, on right: 66 67
stmt_list (73)
    on left: 71 72, on right: 24 25 71
stmt (74)
    on left: 74 75 76 77 78 79 80 81 82 83 84, on right: 71 72 75 76
    77 78
$@8 (75)
    on left: 73, on right: 74
function_call (76)
    on left: 85, on right: 79 128
assign_expr_list (77)
    on left: 86 87, on right: 76
nonempty_assign_expr_list (78)
    on left: 88 89, on right: 86 88
assign_expr (79)
    on left: 91 92, on right: 88 89
$@9 (80)
    on left: 90, on right: 91
relop_expr (81)
    on left: 93 94, on right: 70 77 78 80 84 91 92 94 109 110 119 120
    121
op_or (82)
    on left: 95, on right: 94
relop_term (83)
    on left: 96 97, on right: 93 94 97
op_and (84)
    on left: 98, on right: 97
relop_factor (85)
    on left: 99 100, on right: 96 97
rel_op (86)
    on left: 101 102 103 104 105 106, on right: 100
relop_expr_list (87)
    on left: 107 108, on right: 75 76 81 85 129 130
nonempty_relop_expr_list (88)
    on left: 109 110, on right: 107 109
expr (89)
    on left: 111 112, on right: 20 22 99 100 111 140
add_op (90)
    on left: 113 114, on right: 59 111
term (91)
    on left: 115 116, on right: 111 112 115
mul_op (92)
    on left: 117 118, on right: 61 115
factor (93)
    on left: 119 120 121 122 123 124 125 126 127 128 129 130 131 132
    133 134, on right: 115 116
var_ref (94)
    on left: 135 136 137, on right: 80 131 132 133 136 137
var_ref_dim (95)
    on left: 138 139, on right: 136 139
dim (96)
    on left: 140, on right: 138 139
struct_tail (97)
    on left: 141, on right: 137


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    2 program: $@1 . global_decl_list

    $default  reduce using rule 4 (global_decl_list)

    global_decl_list  go to state 4


state 3

    0 $accept: program $end .

    $default  accept


state 4

    2 program: $@1 global_decl_list .
    3 global_decl_list: global_decl_list . global_decl

    error    shift, and go to state 5
    ID       shift, and go to state 6
    VOID     shift, and go to state 7
    INT      shift, and go to state 8
    FLOAT    shift, and go to state 9
    STRUCT   shift, and go to state 10
    TYPEDEF  shift, and go to state 11

    $end  reduce using rule 2 (program)

    global_decl    go to state 12
    function_decl  go to state 13
    decl_list      go to state 14
    decl           go to state 15
    type_decl      go to state 16
    var_decl       go to state 17
    type           go to state 18
    struct_type    go to state 19


state 5

   42 type: error .

    $default  reduce using rule 42 (type)


state 6

   38 var_decl: ID . id_list MK_SEMICOLON

    ID  shift, and go to state 20

    id_list  go to state 21


state 7

   41 type: VOID .

    $default  reduce using rule 41 (type)


state 8

   39 type: INT .

    $default  reduce using rule 39 (type)


state 9

   40 type: FLOAT .

    $default  reduce using rule 40 (type)


state 10

   43 struct_type: STRUCT . tag

    ID         shift, and go to state 22
    MK_LBRACE  shift, and go to state 23

    tag  go to state 24


state 11

   32 type_decl: TYPEDEF . type id_list MK_SEMICOLON
   33          | TYPEDEF . VOID id_list MK_SEMICOLON
   34          | TYPEDEF . struct_type id_list MK_SEMICOLON

    error   shift, and go to state 5
    VOID    shift, and go to state 25
    INT     shift, and go to state 8
    FLOAT   shift, and go to state 9
    STRUCT  shift, and go to state 10

    type         go to state 26
    struct_type  go to state 27


state 12

    3 global_decl_list: global_decl_list global_decl .

    $default  reduce using rule 3 (global_decl_list)


state 13

    6 global_decl: function_decl .

    $default  reduce using rule 6 (global_decl)


state 14

    5 global_decl: decl_list . function_decl
   28 decl_list: decl_list . decl

    error    shift, and go to state 5
    ID       shift, and go to state 6
    VOID     shift, and go to state 7
    INT      shift, and go to state 8
    FLOAT    shift, and go to state 9
    STRUCT   shift, and go to state 10
    TYPEDEF  shift, and go to state 11

    function_decl  go to state 28
    decl           go to state 29
    type_decl      go to state 16
    var_decl       go to state 17
    type           go to state 18
    struct_type    go to state 19


state 15

   29 decl_list: decl .

    $default  reduce using rule 29 (decl_list)


state 16

   30 decl: type_decl .

    $default  reduce using rule 30 (decl)


state 17

   31 decl: var_decl .

    $default  reduce using rule 31 (decl)


state 18

    8 function_decl: type . ID MK_LPAREN param_list MK_RPAREN MK_LBRACE $@2 block MK_RBRACE
   10              | type . ID MK_LPAREN MK_RPAREN MK_LBRACE $@3 block MK_RBRACE
   11              | type . ID MK_LPAREN param_list MK_RPAREN MK_SEMICOLON
   12              | type . ID MK_LPAREN MK_RPAREN MK_SEMICOLON
   36 var_decl: type . init_id_list MK_SEMICOLON

    ID  shift, and go to state 30

    init_id_list  go to state 31
    init_id       go to state 32


state 19

   35 type_decl: struct_type . MK_SEMICOLON
   37 var_decl: struct_type . id_list MK_SEMICOLON

    ID            shift, and go to state 20
    MK_SEMICOLON  shift, and go to state 33

    id_list  go to state 34


state 20

   53 id_list: ID .
   56        | ID . dim_decl

    MK_LB  shift, and go to state 35

    $default  reduce using rule 53 (id_list)

    dim_decl  go to state 36


state 21

   38 var_decl: ID id_list . MK_SEMICOLON
   54 id_list: id_list . MK_COMMA ID
   55        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 37
    MK_SEMICOLON  shift, and go to state 38


state 22

   45 tag: ID . MK_LBRACE $@4 decl_list MK_RBRACE
   49    | ID . MK_LBRACE $@6 MK_RBRACE
   52    | ID .

    MK_LBRACE  shift, and go to state 39

    $default  reduce using rule 52 (tag)


state 23

   47 tag: MK_LBRACE . $@5 decl_list MK_RBRACE
   51    | MK_LBRACE . $@7 MK_RBRACE

    MK_RBRACE  reduce using rule 50 ($@7)
    $default   reduce using rule 46 ($@5)

    $@5  go to state 40
    $@7  go to state 41


state 24

   43 struct_type: STRUCT tag .

    $default  reduce using rule 43 (struct_type)


state 25

   33 type_decl: TYPEDEF VOID . id_list MK_SEMICOLON
   41 type: VOID .

    ID  shift, and go to state 20

    ID  [reduce using rule 41 (type)]

    id_list  go to state 42


state 26

   32 type_decl: TYPEDEF type . id_list MK_SEMICOLON

    ID  shift, and go to state 20

    id_list  go to state 43


state 27

   34 type_decl: TYPEDEF struct_type . id_list MK_SEMICOLON

    ID  shift, and go to state 20

    id_list  go to state 44


state 28

    5 global_decl: decl_list function_decl .

    $default  reduce using rule 5 (global_decl)


state 29

   28 decl_list: decl_list decl .

    $default  reduce using rule 28 (decl_list)


state 30

    8 function_decl: type ID . MK_LPAREN param_list MK_RPAREN MK_LBRACE $@2 block MK_RBRACE
   10              | type ID . MK_LPAREN MK_RPAREN MK_LBRACE $@3 block MK_RBRACE
   11              | type ID . MK_LPAREN param_list MK_RPAREN MK_SEMICOLON
   12              | type ID . MK_LPAREN MK_RPAREN MK_SEMICOLON
   68 init_id: ID .
   69        | ID . dim_decl
   70        | ID . OP_ASSIGN relop_expr

    OP_ASSIGN  shift, and go to state 45
    MK_LB      shift, and go to state 35
    MK_LPAREN  shift, and go to state 46

    $default  reduce using rule 68 (init_id)

    dim_decl  go to state 47


state 31

   36 var_decl: type init_id_list . MK_SEMICOLON
   67 init_id_list: init_id_list . MK_COMMA init_id

    MK_COMMA      shift, and go to state 48
    MK_SEMICOLON  shift, and go to state 49


state 32

   66 init_id_list: init_id .

    $default  reduce using rule 66 (init_id_list)


state 33

   35 type_decl: struct_type MK_SEMICOLON .

    $default  reduce using rule 35 (type_decl)


state 34

   37 var_decl: struct_type id_list . MK_SEMICOLON
   54 id_list: id_list . MK_COMMA ID
   55        | id_list . MK_COMMA ID dim_decl

    MK_COMMA      shift, and go to state 37
    MK_SEMICOLON  shift, and go to state 50


state 35

   57 dim_decl: MK_LB . cexpr MK_RB

    CONST      shift, and go to state 51
    CONSTF     shift, and go to state 52
    MK_LPAREN  shift, and go to state 53

    cexpr    go to state 54
    mcexpr   go to state 55
    cfactor  go to state 56


state 36

   56 id_list: ID dim_decl .
   58 dim_decl: dim_decl . MK_LB cexpr MK_RB

    MK_LB  shift, and go to state 57

    $default  reduce using rule 56 (id_list)


state 37

   54 id_list: id_list MK_COMMA . ID
   55        | id_list MK_COMMA . ID dim_decl

    ID  shift, and go to state 58


state 38

   38 var_decl: ID id_list MK_SEMICOLON .

    $default  reduce using rule 38 (var_decl)


state 39

   45 tag: ID MK_LBRACE . $@4 decl_list MK_RBRACE
   49    | ID MK_LBRACE . $@6 MK_RBRACE

    MK_RBRACE  reduce using rule 48 ($@6)
    $default   reduce using rule 44 ($@4)

    $@4  go to state 59
    $@6  go to state 60


state 40

   47 tag: MK_LBRACE $@5 . decl_list MK_RBRACE

    error    shift, and go to state 5
    ID       shift, and go to state 6
    VOID     shift, and go to state 7
    INT      shift, and go to state 8
    FLOAT    shift, and go to state 9
    STRUCT   shift, and go to state 10
    TYPEDEF  shift, and go to state 11

    decl_list    go to state 61
    decl         go to state 15
    type_decl    go to state 16
    var_decl     go to state 17
    type         go to state 62
    struct_type  go to state 19


state 41
